# s2_prg_lab1

./: .gitignore  CMakeLists.txt
src/: main.c  utils.c  utils.h
